# Chip-8-Emulator

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  cpu.h  instructions.h  main.cpp  parser.h  types.h
Chip8-Emulator/: Chip8.hpp  Types.hpp  chip8.cpp  chip8.h  main.cpp  memory.h
core/: chip8.cpp  chip8.h  font.h  graphics.cpp  graphics.h  instructions.h  opcode.h  parser.h  random.h
includes/: chip8.h  memory.h  random.h  types.h
src/: chip8.cpp  main.cpp  platform.cpp
